Dynegy/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Annual_MWh__c</fullName>
        <label>Annual MWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Entity__c</fullName>
        <label>Billing Entity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Entity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_End_Date__c</fullName>
        <label>Competitive End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Price_KWh__c</fullName>
        <label>Current Price ($/kWh)</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Product__c</fullName>
        <label>Current  Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Block and Index</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Index</fullName>
                </value>
                <value>
                    <fullName>Pass Through</fullName>
                </value>
                <value>
                    <fullName>Percentage Energy</fullName>
                </value>
                <value>
                    <fullName>Percent Off SSO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Supplier__c</fullName>
        <label>Current Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AEP Retail</fullName>
                </value>
                <value>
                    <fullName>Atmos Energy</fullName>
                </value>
                <value>
                    <fullName>BP Canada Marketing</fullName>
                </value>
                <value>
                    <fullName>Capital Energy Ohio</fullName>
                </value>
                <value>
                    <fullName>Champion</fullName>
                </value>
                <value>
                    <fullName>Chose Not To Participate</fullName>
                </value>
                <value>
                    <fullName>Cleveland Electric Illuminating</fullName>
                </value>
                <value>
                    <fullName>Columbia Gas</fullName>
                </value>
                <value>
                    <fullName>Columbus Southern Power</fullName>
                </value>
                <value>
                    <fullName>Constellation NewEnergy</fullName>
                </value>
                <value>
                    <fullName>Dayton Power and Light</fullName>
                </value>
                <value>
                    <fullName>Delta Energy</fullName>
                </value>
                <value>
                    <fullName>Demand Response Partners</fullName>
                </value>
                <value>
                    <fullName>Direct Energy Business, LLC</fullName>
                </value>
                <value>
                    <fullName>Dominion East</fullName>
                </value>
                <value>
                    <fullName>Dominion Retail, Inc.</fullName>
                </value>
                <value>
                    <fullName>DPL Resources</fullName>
                </value>
                <value>
                    <fullName>Duke Energy Ohio</fullName>
                </value>
                <value>
                    <fullName>EnergyConnect</fullName>
                </value>
                <value>
                    <fullName>Energy Curtailment Specialists</fullName>
                </value>
                <value>
                    <fullName>EnerNOC</fullName>
                </value>
                <value>
                    <fullName>Exelon Energy</fullName>
                </value>
                <value>
                    <fullName>FirstEnergy Solutions Corp.</fullName>
                </value>
                <value>
                    <fullName>Gexa Energy</fullName>
                </value>
                <value>
                    <fullName>Glacial Energy</fullName>
                </value>
                <value>
                    <fullName>Guttman Energy</fullName>
                </value>
                <value>
                    <fullName>Hess Corporation</fullName>
                </value>
                <value>
                    <fullName>IGS</fullName>
                </value>
                <value>
                    <fullName>Integrys Energy Services, Inc.</fullName>
                </value>
                <value>
                    <fullName>NextEra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_2__c</fullName>
        <label>Lead Source 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGE Benton Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Carbondale Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Carlinville Comm Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Carterville Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Effingham Area Businesses</fullName>
                </value>
                <value>
                    <fullName>AGEGreater Centralia Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Greater Salem Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Herrin Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE IOGA</fullName>
                </value>
                <value>
                    <fullName>AGE Jefferson County Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Lawrence County Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Marion Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Mount Vernon Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Muni-Agg Community</fullName>
                </value>
                <value>
                    <fullName>AGE Murphysboro Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Sesser Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE Virden Chamber</fullName>
                </value>
                <value>
                    <fullName>AGE West Frankfort Chamber</fullName>
                </value>
                <value>
                    <fullName>Barrington Chamber</fullName>
                </value>
                <value>
                    <fullName>CAIC (Calumet Area Ind Comm)</fullName>
                </value>
                <value>
                    <fullName>CBAI</fullName>
                </value>
                <value>
                    <fullName>Chicago Southland Chamber</fullName>
                </value>
                <value>
                    <fullName>Cincinnati Chamber</fullName>
                </value>
                <value>
                    <fullName>COPE</fullName>
                </value>
                <value>
                    <fullName>Cooperator</fullName>
                </value>
                <value>
                    <fullName>CQI Decatur</fullName>
                </value>
                <value>
                    <fullName>CQI Effingham</fullName>
                </value>
                <value>
                    <fullName>CQI McLean</fullName>
                </value>
                <value>
                    <fullName>CQI Peoria</fullName>
                </value>
                <value>
                    <fullName>DCES Bolingbrook Chamber</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leadsource__c</fullName>
        <formula>TEXT( LeadSource )</formula>
        <label>Leadsource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <label>Service Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AEPOHIO</fullName>
                </value>
                <value>
                    <fullName>Ameren-IL</fullName>
                </value>
                <value>
                    <fullName>ComEd-IL</fullName>
                </value>
                <value>
                    <fullName>DAYTON</fullName>
                </value>
                <value>
                    <fullName>DEOHIO</fullName>
                </value>
                <value>
                    <fullName>Duquense - PA</fullName>
                </value>
                <value>
                    <fullName>FEOHIO</fullName>
                </value>
                <value>
                    <fullName>FEWP</fullName>
                </value>
                <value>
                    <fullName>MetEd - PA</fullName>
                </value>
                <value>
                    <fullName>PECO - PA</fullName>
                </value>
                <value>
                    <fullName>Penelec - PA</fullName>
                </value>
                <value>
                    <fullName>WPENN-PA</fullName>
                </value>
                <value>
                    <fullName>PPL - PA</fullName>
                </value>
                <value>
                    <fullName>Penn Power - PA</fullName>
                </value>
                <value>
                    <fullName>Pike County - PA</fullName>
                </value>
                <value>
                    <fullName>UGI - PA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utility_LDC__c</fullName>
        <label>Utility/LDC</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AEP</fullName>
                </value>
                <value>
                    <fullName>Ameren</fullName>
                </value>
                <value>
                    <fullName>Comed</fullName>
                </value>
                <value>
                    <fullName>DEO</fullName>
                </value>
                <value>
                    <fullName>DPL</fullName>
                </value>
                <value>
                    <fullName>Duquesne</fullName>
                </value>
                <value>
                    <fullName>First Energy (FE)</fullName>
                </value>
                <value>
                    <fullName>Met-ED</fullName>
                </value>
                <value>
                    <fullName>PECO</fullName>
                </value>
                <value>
                    <fullName>Penelec</fullName>
                </value>
                <value>
                    <fullName>PPL</fullName>
                </value>
                <value>
                    <fullName>West Penn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>